# mine-rs

./: .gitignore  Cargo.toml  README.md
.github/: pull-request-checks.yml  release.yml
.github/workflows/: _build.yml  _check.yml  _tag_and_release.yml  _test.yml  build-and-publish.yml  build.yml  check-test-and-build.yml  check.yml  pull-request-checks.yml  release-next-version.yml  release.yml  rust.yml  tag-and-release.yml  test-build-and-release.yml  test.yml
.github/workflows/old_wf/: pull-request-checks.yml  test-build-and-release.yml
src/: app.rs  debug_main.rs  field.rs  game_ui.rs  lib.rs  main.rs  menu_ui.rs  stopwatch.rs  tui.rs  update.rs
src/field/: cell.rs
